Closed Bug 624337 Opened 15 years ago Closed 15 years ago

Forward icon is not shown when email is forwarded inline by filter

Categories

(MailNews Core :: Filters, defect)

1.9.2 Branch
defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.3a3

People

(Reporter: el.cameleon.1, Assigned: Bienvenu)

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

If you set a filter which forward email to a particular addresses, the original email doesn't show the icon/emblem which indicate that it has been forwarded. It was working in previous release of Thunderbird (maybe 3.1.4 or 3.1.5). For information, the problem has been identified on the geckozone's forums: http://www.geckozone.org/forum/viewtopic.php?f=4&t=89209
Caméléon can you find the regression window ?
Sure I can... in fact it didn't works for any 3.1.x release, but it works ok with 3.0.9 release (tested on windows XP with a yahoo POP account).
Can you try to narrow that down to a nightly (one between 3.0 and 3.1 ) ?
(In reply to comment #2) > Sure I can... in fact it didn't works for any 3.1.x release, but it works ok > with 3.0.9 release (tested on windows XP with a yahoo POP account). In comment 0 you said that 3.1.4 and 3.1.5 worked? Or did you get those numbers wrong? Also, are you using IMAP or POP ?
(In reply to comment #3) > Can you try to narrow that down to a nightly (one between 3.0 and 3.1 ) ? Yes if you tell me where I can download it. (In reply to comment #4) > In comment 0 you said that 3.1.4 and 3.1.5 worked? Or did you get those numbers wrong? I haven't done the test from myself with older release at this moment, so I was just using comments from other users which don't remember well when they lose the functionality... So these number are wrong, it did not work at all with any 3.1 release (at least not with 3.1.0, 3.1.3, 3.1.6). > Also, are you using IMAP or POP ? Yahoo POP account
I have finely do some more tests with alpha and beta TB3.1 releases and it seems that the problem appears between 3.1.alpha1 and 3.1.beta1. I have also noticed that in 3.1.alpha1, the message is by default forwarded as attachment, whereas in 3.1.beta1, the message is forwarded inline. Maybe this change is the cause of the regression?
In 3.1, the forward by filter code uses the same forward choice (inline or attachment) as the normal user-initiated forward. If you switch that to forward as attachment (options, composition, general, forward (inline|attachment)), does that fix the problem for you?
(In reply to comment #7) > If you switch that to forward as attachment, does that fix the problem for you? Yes!!!!!!!!!!! This is the point! Forwarded as attachment instead of inline with TB3.1.7 works. so the problem only occurs with forwarded inline message!
Attached patch proposed fix (obsolete) — Splinter Review
This is the same way we set the forwarded flag on messages forwarded as attachments by filters. This code is only called by forward inline message filter actions.
Assignee: nobody → bienvenu
Attachment #503557 - Flags: review?(bugzilla)
Summary: Forward icon is not shown when email is forwarded by filter → Forward icon is not shown when email is forwarded inline by filter
Comment on attachment 503557 [details] [diff] [review] proposed fix I think if "SendTheMessage" is the only time this function is called, then we should consider renaming it, e.g. AutoForwardMsgInline and hard code the composeType argument. Then we're protecting ourselves from someone thinking this is a generic function and calling it and ending up with a message unexpectedly marked as forwarded.
Attachment #503557 - Attachment is obsolete: true
Attachment #503856 - Flags: review?(bugzilla)
Attachment #503557 - Flags: review?(bugzilla)
Comment on attachment 503856 [details] [diff] [review] fix addressing comments, with some formatting cleanup >+ForwardMsgInline(nsIMsgCompFields * compFields, >+ nsMsgAttachmentData *attachmentList, >+ MSG_ComposeFormat composeFormat, >+ nsIMsgIdentity *identity, >+ const char *originalMsgURI, >+ nsIMsgDBHdr *origMsgHdr) nit: might as well remove the space between the * and compFields as well. r=Standard8 with that fixed.
Attachment #503856 - Flags: review?(bugzilla) → review+
Component: Mail Window Front End → Filters
Product: Thunderbird → MailNews Core
QA Contact: front-end → filters
Version: 3.1 → 1.9.2 Branch
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.3a3
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: