set forwarded flag on messages forwarded inline by message filters, r=standard8, bug 624337